personal_website/src/index.css
/* || RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color: var(--clr-primary-600);
    background-color: inherit;
}

button {
    font: inherit;
    text-decoration: none;
    border: none;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    color: var(--clr-primary-600);
}

.indent {
    text-indent: 2rem;
}

html {
    width: 100%;
    overflow-x: hidden;
    font-family: "Helvetica", sans-serif;
    display: flex;
    justify-content: center;
    background-color: var(--clr-background-900);
}

body {
    width: 75%;
    overflow-x: hidden;
    font-family: "Helvetica", sans-serif;
    /* padding: 2rem 0; */
}

p, h1, h2, h3, h4, h5, h6 {
    line-height: 1.5;
}

.sub-header {
    font-size: 3rem;
}

.mobile {
    display: none;
}


/* || VARIABLES */

:root {

    --clr-transparent: transparent;
    
    --clr-primary-800: #002b3b;
    --clr-primary-600: #004d66;
    --clr-primary-400: #0077a7;
    --clr-primary-200: #0f99bb;

    --clr-accent-600: #ee7600;
    --clr-accent-400: #f9a825;
    --clr-accent-200: #ffca28;

    --clr-background-900: #f7fdff;
}

/* || BLOCKS/COMPONENTS */
.pointer {
    cursor: pointer;
}

.footer {
    display: flex;
    margin: 1rem 2rem 1rem 0;
    flex-direction: column;
}

/* Base styles for fade-in sections */
.fade-in {
    min-height: 100vh;
    /* display: flex; */
    /* justify-content: center; */
    /* align-items: center; */
    /* font-size: 2rem; */
    /* background: #f0f0f0; */
    /* margin: 20px 0; */
    opacity: 0; /* Start with invisible */
    transform: translateY(50px); /* Start slightly below */
    transition: opacity 0.8s ease, transform 0.8s ease; /* Smooth transition */
  }
  
  /* Add a class when the section is in view */
  .fade-in.in-view {
    opacity: 1; /* Fully visible */
    transform: translateY(0); /* Reset transform */
  }  

/* MEDIA */
@media screen and (max-width: 1023px) and (min-width: 768px){
    body {
        width: 85%;
    }
}

@media screen and (max-width: 767px){
    body {
        width: 95%;
    }

    .navbar {
        display: none;
    }

    .sub-header {
        font-size: 1.5rem;
    }

    .mobile{
        display: block;
    }

    .web {
        display: none;
    }
}

